# musa-611-spring-2022-week1

./: ._introductions  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: test-correct-files.yml  test-html-contents.yml
__tests__/: test_correct_files.py  test_html_contents.js
introductions/: ._aidancole.html  AdrianLeon.html  AlanaKim.html  Gianluca_Mangiapane.html  HuiTian.html  JiaminTan.html  Kelly.html  Lan_Xiao.html  LechuanH.html  OliviaScalora.html.html  SaiyaSheth.html  Shimin.html  Xiaoyi.html  YebeiYao.html  ZiyiYang.html  Ziyuan_Cai.html  _XiongZheng.html  _marlanazink.html  _start.html  aidancole.html  austinwheat.html  brianacervantes.html  celineAPOLLON.html  elisabethericson.html  hanpuyao.html  jeffstern.html  jennaepstein.html  jialiyao.html  jingyili.html  johnathanclementi.html  kristinchang.html  mjumbepoe.html  nelms.html  sisuncheng.html  xiaoyi.html  zhenzhao.html  ziyi.html
introductions/scripts/: introductions.js
introductions/styles/: introductions.css
